@@ -257,9 +257,9 @@ PR_TNEF_CORRELATION_KEY                     = PROP_TAG(PT_BINARY,     127)
 PR_BODY                                     = PROP_TAG( PT_TSTRING,   4096)
 PR_BODY_W                                   = PROP_TAG( PT_UNICODE,   4096)
 PR_BODY_A                                   = PROP_TAG( PT_STRING8,   4096)
-PR_BODY_HTML_A                              = PROP_TAG( PT_STRING8,   4115)
+PR_BODY_HTML                                = PROP_TAG( PT_TSTRING,   4115)
 PR_BODY_HTML_W                              = PROP_TAG( PT_UNICODE,   4115)
-
+PR_BODY_HTML_A                              = PROP_TAG( PT_STRING8,   4115)
 PR_REPORT_TEXT                              = PROP_TAG( PT_TSTRING,   4097)
 PR_REPORT_TEXT_W                            = PROP_TAG( PT_UNICODE,   4097)
 PR_REPORT_TEXT_A                            = PROP_TAG( PT_STRING8,   4097)
